background image fix on safari

--- a/apps/admin_app/static/admin_app/style.css
+++ b/apps/admin_app/static/admin_app/style.css
@@ -708,6 +708,8 @@ a:hover{
 @media only screen and (max-width:600px) {
     #bg_img{
         background-attachment: scroll;
+        -webkit-overflow-scrolling: touch;
+        height: 100vh;
     }
     
     #quote{
